force-app/main/default/objects/Docket_Suffix__mdt/Docket_Suffix__mdt.object-meta.xml
<CustomObject>
    <label>Docket Suffix</label>
    <pluralLabel>Docket Suffix</pluralLabel>
</CustomObject>