force-app/main/default/objects/Docket_Suffix__mdt/fields/No_of_Digits_in_Family__c.field-meta.xml
<CustomField>
    <fullName>No_of_Digits_in_Family__c</fullName>
    <label>No of Digits in Family</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>