force-app/main/default/objects/Docket_Suffix__mdt/fields/ObjectName__c.field-meta.xml
<CustomField>
    <fullName>ObjectName__c</fullName>
    <label>ObjectName</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SymphonyLF__Copyright__c</fullName>
                <default>true</default>
                <label>SymphonyLF__Copyright__c</label>
            </value>
            <value>
                <fullName>SymphonyLF__Agreement_Contract__c</fullName>
            </value>
            <value>
                <fullName>SymphonyLF__Dispute_Opposition__c</fullName>
            </value>
            <value>
                <fullName>SymphonyLF__General_Matter__c</fullName>
            </value>
            <value>
                <fullName>SymphonyLF__Mark__c</fullName>
            </value>
            <value>
                <fullName>SymphonyLF__Patent_Family__c</fullName>
            </value>
            <value>
                <fullName>SymphonyLF__Design_Family__c</fullName>
            </value>
            <value>
                <fullName>SymphonyLF__Patent__c</fullName>
            </value>
            <value>
                <fullName>SymphonyLF__Trademark__c</fullName>
            </value>
            <value>
                <fullName>SymphonyLF__Design__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>