force-app/main/default/objects/Docket_Suffix__mdt/listViews/AdminView.listView-meta.xml
<ListView>
    <fullName>AdminView</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Family_ID_Start_Number__c</columns>
    <columns>No_of_Digits_in_Family__c</columns>
    <columns>ObjectName__c</columns>
    <filterScope>Everything</filterScope>
    <label>AdminView</label>
</ListView>